// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthenticationStatus > matches snapshot in authenticated state 1`] = `
<DocumentFragment>
  <div
    class="my-4 rounded border bg-gray-100 shadow p-4"
  >
    <h2
      class="font-semibold mb-3 text-xl"
    >
      Authentication Status (Debug)
    </h2>
    <p
      class="mb-2"
    >
      Status: 
      <span
        class="font-medium text-green-600"
      >
        Authenticated
      </span>
    </p>
    <div
      class="mb-2 text-sm text-gray-700"
    >
      <p>
        User ID: 1
      </p>
      <p>
        Email: snap@example.com
      </p>
      <p>
        Username: SnapUser
      </p>
    </div>
    <div
      class="flex gap-2 mt-4"
    >
      <button
        class="rounded bg-blue-500 text-white transition duration-150 hover:bg-blue-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
        disabled=""
      >
        Log In (Test)
      </button>
      <button
        class="rounded bg-gray-500 text-white transition duration-150 hover:bg-gray-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
      >
        Log Out
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStatus > matches snapshot in compact authenticated state 1`] = `
<DocumentFragment>
  <div
    class="my-4 rounded border bg-gray-100 shadow p-2"
  >
    <h2
      class="font-semibold mb-1 text-lg"
    >
      Authentication Status 
    </h2>
    <p
      class="mb-1 text-sm"
    >
      Status: 
      <span
        class="font-medium text-green-600"
      >
        Authenticated
      </span>
    </p>
    <div
      class="mb-1 text-xs text-gray-600"
    >
      <p>
        snap.compact@example.com
      </p>
    </div>
    <div
      class="flex gap-2 mt-2"
    >
      <button
        class="rounded bg-blue-500 text-white transition duration-150 hover:bg-blue-600 disabled:cursor-not-allowed disabled:opacity-50 px-2 py-1 text-sm"
        disabled=""
      >
        Login
      </button>
      <button
        class="rounded bg-gray-500 text-white transition duration-150 hover:bg-gray-600 disabled:cursor-not-allowed disabled:opacity-50 px-2 py-1 text-sm"
      >
        Logout
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStatus > matches snapshot in default state 1`] = `
<DocumentFragment>
  <div
    class="my-4 rounded border bg-gray-100 shadow p-4"
  >
    <h2
      class="font-semibold mb-3 text-xl"
    >
      Authentication Status (Debug)
    </h2>
    <p
      class="mb-2"
    >
      Status: 
      <span
        class="font-medium text-red-600"
      >
        Not Authenticated
      </span>
    </p>
    <div
      class="flex gap-2 mt-4"
    >
      <button
        class="rounded bg-blue-500 text-white transition duration-150 hover:bg-blue-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
      >
        Log In (Test)
      </button>
      <button
        class="rounded bg-gray-500 text-white transition duration-150 hover:bg-gray-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
        disabled=""
      >
        Log Out
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStatus > matches snapshot in error state 1`] = `
<DocumentFragment>
  <div
    class="my-4 rounded border bg-gray-100 shadow p-4"
  >
    <h2
      class="font-semibold mb-3 text-xl"
    >
      Authentication Status (Debug)
    </h2>
    <p
      class="mb-2"
    >
      Status: 
      <span
        class="font-medium text-red-600"
      >
        Not Authenticated
      </span>
    </p>
    <div
      class="rounded border border-red-300 bg-red-100 my-2 p-2"
    >
      <div
        data-testid="error-info"
      >
        Snapshot error
      </div>
    </div>
    <div
      class="flex gap-2 mt-4"
    >
      <button
        class="rounded bg-blue-500 text-white transition duration-150 hover:bg-blue-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
      >
        Log In (Test)
      </button>
      <button
        class="rounded bg-gray-500 text-white transition duration-150 hover:bg-gray-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
        disabled=""
      >
        Log Out
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStatus > matches snapshot in loading state 1`] = `
<DocumentFragment>
  <div
    class="my-4 rounded border bg-gray-100 shadow p-4"
  >
    <h2
      class="font-semibold mb-3 text-xl"
    >
      Authentication Status (Debug)
    </h2>
    <p
      class="mb-2"
    >
      Status: 
      <span
        class="font-medium text-red-600"
      >
        Not Authenticated
      </span>
    </p>
    <p
      class="animate-pulse text-blue-500"
    >
      Loading...
    </p>
    <div
      class="flex gap-2 mt-4"
    >
      <button
        class="rounded bg-blue-500 text-white transition duration-150 hover:bg-blue-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
        disabled=""
      >
        Log In (Test)
      </button>
      <button
        class="rounded bg-gray-500 text-white transition duration-150 hover:bg-gray-600 disabled:cursor-not-allowed disabled:opacity-50 px-4 py-2"
        disabled=""
      >
        Log Out
      </button>
    </div>
  </div>
</DocumentFragment>
`;
